import acm.program.*;

public class ACMHello extends ConsoleProgram {
    public void run() {
        println("Hello, LBYCPEI world!");
    }

    public static void main (String[] args) {
        (new ACMHello()).start(args);
    }
}
