@startuml

title __SRC's Class Diagram__\n

  namespace  {
    class ACMHello {
        {static} + main()
        + run()
    }
  }
  

  namespace  {
    class Circle {
        - radius : int
        {static} + main()
        ~ GetArea()
        ~ GetPerimeter()
    }
  }
  

  namespace  {
    class DigitalArtistry {
        {static} + main()
        + run()
    }
  }
  

  namespace  {
    class Ellipse {
        - semiMajorAxis : int
        - semiMinorAxis : int
        {static} + main()
        ~ CalculateArea()
        ~ CalculatePerimeter()
    }
  }
  

  namespace  {
    class GCMHello {
        {static} + main()
        + run()
    }
  }
  

  namespace  {
    class Rectangle {
        ~ height : int
        ~ width : int
        {static} + main()
        ~ CalculateArea()
        ~ CalculatePerimeter()
    }
  }
  

  namespace  {
    class Square {
        - side : int
        {static} + main()
        ~ GetArea()
        ~ GetPerimeter()
    }
  }
  

  namespace  {
    class helloworld {
        {static} + add()
        {static} + main()
    }
  }
  

  ACMHello -up-|> acm.program.ConsoleProgram
  DigitalArtistry -up-|> acm.program.GraphicsProgram
  GCMHello -up-|> acm.program.GraphicsProgram


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
